--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,6 +52,6 @@
       </footer>
     </div>
     <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
-    <script src="./assets/theme-control.js"></script>
+    <script src="../assets/js/theme-control.js"></script>
   </body>
 </html>
