--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,8 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
+        <p>{{ site.additional_info | default: site.github.project_tagline }}</p>
+        {{ site.description | default: site.github.project_tagline }}
 
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
