--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,13 +25,16 @@
         <p>{{ site.additional_info | default: site.github.project_tagline }}</p>
         {{ site.description | default: site.github.project_tagline }}
 
-        {% if site.github.is_project_page %}
+        <span><img src="{{ site.instagram | relative_url}}"></span>
+        <span><img src="{{ site.linkedin | relative_url}}"></span>  
+        <!-- {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-        {% endif %}
+        {% endif %} -->
 
-        {% if site.github.is_user_page %}
+        
+        <!-- {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
+        {% endif %} -->
 
         {% if site.show_downloads %}
         <ul class="downloads">
