--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,8 @@
         <p>{{ site.additional_info | default: site.github.project_tagline }}</p>
         {{ site.description | default: site.github.project_tagline }}
 
-        <span><img src="{{ site.instagram | relative_url}}"></span>
-        <span><img src="{{ site.linkedin | relative_url}}"></span>  
+        <a href="{{site.ig_url}}"><img src="{{ site.instagram | relative_url}}"></a>
+        <a href="{{site.linkedin_url}}"><img src="{{ site.linkedin | relative_url}}"></a>  
         <!-- {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %} -->
