--- a/assets/css/dark-theme.css
+++ b/assets/css/dark-theme.css
@@ -351,7 +351,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p, ul, ol, table, pre, dl {
-  margin:0 0 20px
+  margin:0 0 ;
+  word-wrap: break-word;
 }
 
 h1, h2, h3 {
