--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
       </header>
       <section>
 
-      <table>
+      <!-- <table>
         <tbody>
           <tr>
             <td>
@@ -57,7 +57,7 @@
             </td>
           </tr>
         </tbody>
-      </table>
+      </table> -->
       {{ content }}
 
       </section>
