--- a/_layouts/_default.html
+++ b/_layouts/_default.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}" nighteye="disabled">
+<html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-{% seo %}
-    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
-    <link rel="stylesheet" href="{{ '/assets/css/dark-theme.css'| relative_url }}">
-    <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <![endif]-->
-    {% include head-custom.html %}
+    <link rel="stylesheet" href="{{ "/assets/css/style.css"}}">
+    <link rel="stylesheet" href="{{ '/assets/css/dark-theme.css'}}">
+    <!-- {% include head-custom.html %} -->
   </head>
   <body>
     <div class="wrapper">
@@ -25,16 +20,12 @@
 
         <p>{{ site.additional_info | default: site.github.project_tagline }}</p>
 
-        <a href="{{site.ig_url}}"><img src="{{ site.instagram | relative_url}}"></a>
-        <a href="{{site.linkedin_url}}"><img src="{{ site.linkedin | relative_url}}"></a>  
-        <!-- {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-        {% endif %} -->
-
+        <a href="{{site.ig_url}}"><img src="{{ site.instagram }}"></a>
+        <a href="{{site.linkedin_url}}"><img src="{{ site.linkedin }}"></a>  
         
-        <!-- {% if site.github.is_user_page %}
+        {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %} -->
+        {% endif %}
 
         {% if site.show_downloads %}
         <ul class="downloads">
