--- a/_layouts/_default.html
+++ b/_layouts/_default.html
@@ -1,65 +1,33 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{{ '/assets/css/style.css'}}">
-    <link rel="stylesheet" href="{{ '/assets/css/dark-theme.css'}}">
-    <!-- {% include head-custom.html %} -->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1><a href="{{ '/' | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Shuwei - a Full-Stack developer</title>
+  <link rel="stylesheet" href="../assets/css/style.css">
+</head>
+<body>
+  <header>
+    <h1>Shuwei Kuo</h1>
+    <nav>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-        {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" />
-        {% endif %}
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
-
-        <p>{{ site.additional_info | default: site.github.project_tagline }}</p>
-
-        <a href="{{site.ig_url}}"><img src="{{ site.instagram }}"></a>
-        <a href="{{site.linkedin_url}}"><img src="{{ site.linkedin }}"></a>  
-        
-        {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
-
-        {% if site.show_downloads %}
-        <ul class="downloads">
-          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
-        </ul>
-        {% endif %}
-      </header>
-      <section>
-
-      <!-- <table>
-        <tbody>
-          <tr>
-            <td>
-              <h1><a href="./">Summary</a></h1>
-            </td>
-            <td>
-              <h1><a href="./experience.html">Experiences</a></h1>
-            </td>
-          </tr>
-        </tbody>
-      </table> -->
-      {{ content }}
-
+  <main>
+    <section id="about">
       </section>
-      <footer>
-        {% if site.github.is_project_page %}
-        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %}
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
-    <script src="{{'/assets/js/theme-control.js'| relative_url }}"></script>
-  </body>
+    <section id="projects">
+      </section>
+    <section id="contact">
+      </section>
+  </main>
+
+  <footer>
+    </footer>
+</body>
 </html>
